--- a/styles/styles.css
+++ b/styles/styles.css
@@ -64,13 +64,13 @@ section {
   letter-spacing: 2px;
 }
 
-.banner-content button:hover{
-    cursor: pointer;
-    color: aliceblue;
-    border: 2px solid aliceblue;
-    border-radius:20px 40px 40px 2px ;
-    height: 50px;
-    transition: .3s linear;
+.banner-content button:hover {
+  cursor: pointer;
+  color: aliceblue;
+  border: 2px solid aliceblue;
+  border-radius: 20px 40px 40px 2px;
+  height: 50px;
+  transition: 0.3s linear;
 }
 
 main {
@@ -107,19 +107,18 @@ main {
   width: 60%;
   border: 1px solid rgba(51, 168, 219, 1);
   border-radius: 57px;
-  background-color: rgba(41, 38, 38, .7);
+  background-color: rgba(41, 38, 38, 0.7);
   color: #fff;
   box-shadow: -2px 6px 4px 0px rgba(0, 0, 0, 0.4) inset;
 }
 
 .module:hover {
-    cursor: pointer;
-    background-color: rgba(41, 38, 38, .9);
+  cursor: pointer;
+  background-color: rgba(41, 38, 38, 0.9);
   transition: 300ms linear;
 }
 .module span {
   color: rgba(51, 168, 219, 1);
-  
 }
 
 #transform-world {
@@ -146,15 +145,19 @@ main {
 }
 
 #professional-challenges {
-    display: flex;
-    flex-direction: column;
-    width: 70%;
-    margin-top: 0px;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  width: 70%;
+  margin-top: 0px;
 }
 
-#professional-challenges h2{
-    letter-spacing: 3px;
-    font-size: 1.5rem;
+#professional-challenges img {
+  width: 50vw;
+}
+#professional-challenges h2 {
+  letter-spacing: 3px;
+  font-size: 1.5rem;
 }
 #professional-challenges p {
   margin-top: 10px;
